--- a/destinations/templates/base.html
+++ b/destinations/templates/base.html
@@ -8,19 +8,19 @@
 
   <!-- Add a link to the bootstrap CDN here -->
   
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   
   <!-- Uncomment the following line to include your custom CSS file -->
-  {% comment %} 
+  <!-- {% comment %}  -->
     <link rel="stylesheet" type="text/css" href="{% static 'custom.css' %}"> 
-  {% endcomment %}
+  <!-- {% endcomment %} <--- this is how we add comments with Django! --> 
 
-  <title>{% block title %}{% endblock title %}</title>
+  <title>{% block title %}Travel the World with Tourista! {% endblock title %}</title>
 </head>
-
-<body>
-  
+ <body class="body"> 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> -->
+  <nav class="navbar navbar-dark" style="background-color: #8a5117;" style="font-size: 40px">
     <a class="navbar-brand" href="{% url 'destination-list' %}">Tourista</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -35,13 +35,15 @@
     </div>
   </nav>
   <!-- End Navbar -->
-
+<p></p>
   <div class="container">
     {% block content %} {% endblock content %}
   </div>
 
   <!-- Add your bootstrap script tags here -->
-
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
-
+</p>
 </html>
